Fix datepicker issues on Firefox. [IQSLDSH-225]

--- a/public/modules/admin/css/audit.scss
+++ b/public/modules/admin/css/audit.scss
@@ -25,24 +25,27 @@
     width: 180px;
     display: flex;
     align-items: center;
-}
 
-.iqss-admin-audit-filters-datePicker input {
-    border: 1px solid $light-grey-color;
-}
+    button {
+        height: 30px;
+        padding: 5px 10px;
+    }
 
-.iqss-admin-audit-filters-datePicker-openButton {
-    height: 25px !important;
-    padding: 3px 5px !important;
-}
+    input.form-control {
+        width: 150px;
+        height: auto;
+        border: 1px solid $light-grey-color;
+    }
 
-.iqss-admin-audit-filters-datePicker button {
-    height: 30px;
-    padding: 5px 10px;
-}
+    .iqss-admin-audit-filters-datePicker-openButton {
+        width: 30px;
+        height: 30px;
+        padding: 3px 5px;
+    }
 
-.iqss-admin-audit-filters-datePicker .uib-close {
-    display: none;
+    .uib-close {
+        display: none;
+    }
 }
 
 .iqss-admin-audit-downloadLink {
